# ministage

./: .gitignore  CMakeLists.txt  README.md  agents.cc  agents.hh  canvas.cc  canvas.hh  get_astar_results.cc  get_ministage_results.cc  ministage.hh  random.hh  run_astar.cc  run_ministage.cc  shared_utils.cc  shared_utils.hh  simulation_data.cc  simulation_manager.cc  utils.hh
astar_src/: CMakeLists.txt  astar_agent.cc  astar_agent.hh  astar_canvas.cc  astar_canvas.hh  astar_manager.cc  astar_manager.hh  astar_planner.cc  astar_planner.hh  astar_utils.cc  astar_utils.hh
experiment_data/: experiment_goal_rates.csv  experiment_speeds.csv
plotting/: fig2.ipynb  fig3.ipynb  fig4.ipynb  traffic_figures.mplstyle
simulation_scripts/: get_astar_results.cc  get_conditional_results.cc  get_experimentmatch_results.cc  get_ministage_results.cc  run_ministage.cc
src/: CMakeLists.txt  agents.cc  agents.hh  canvas.cc  canvas.hh  simulation_data.cc  simulation_manager.cc  simulation_manager.hh  utils.hh
